--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5627,7 +5627,7 @@ button.btn-floating {
 .chips .input {
   background: none;
   border: 0;
-  color: rgba(0, 0, 0, 0.6);
+  color: #008ac9;
   display: inline-block;
   font-size: 1rem;
   height: 3rem;
@@ -5717,21 +5717,21 @@ label {
    ========================================================================== */
 /* Style Placeholders */
 ::-webkit-input-placeholder {
-  color: #d1d1d1;
+  color: #008ac9;
 }
 
 :-moz-placeholder {
   /* Firefox 18- */
-  color: #d1d1d1;
+  color:#008ac9;
 }
 
 ::-moz-placeholder {
   /* Firefox 19+ */
-  color: #d1d1d1;
+  color: #008ac9;
 }
 
 :-ms-input-placeholder {
-  color: #d1d1d1;
+  color: #008ac9;
 }
 
 /* Text inputs */
@@ -5750,7 +5750,7 @@ input[type=search],
 textarea.materialize-textarea {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
+  border-bottom: 1px solid #008ac9;
   border-radius: 0;
   outline: none;
   height: 3rem;
@@ -5818,7 +5818,7 @@ input[type=search]:disabled + label,
 input[type=search][readonly="readonly"] + label,
 textarea.materialize-textarea:disabled + label,
 textarea.materialize-textarea[readonly="readonly"] + label {
-  color: rgba(0, 0, 0, 0.26);
+  color: #008ac9;
 }
 
 input:not([type]):focus:not([readonly]),
@@ -5834,8 +5834,8 @@ input[type=tel]:focus:not([readonly]),
 input[type=number]:focus:not([readonly]),
 input[type=search]:focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #26a69a;
-  box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #008ac9;
+  box-shadow: 0 1px 0 0 #008ac9;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -5851,7 +5851,7 @@ input[type=tel]:focus:not([readonly]) + label,
 input[type=number]:focus:not([readonly]) + label,
 input[type=search]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #26a69a;
+  color: #008ac9;
 }
 
 input:not([type]).valid, input:not([type]):focus.valid,
