--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,12 @@
 	font-family: 'Lobster', cursive;
 }
 
+.action {
+    position: absolute;
+    -ms-transform: translate(50px, 100px);
+    -webkit-transform: translate(50px, 100px);
+    transform: translate(-50%, -100%);
+    float: right
+
+}
+
