--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@
 
 .action {
     position: absolute;
-    -ms-transform: translate(50px, 100px);
-    -webkit-transform: translate(50px, 100px);
+    -ms-transform: translate(-50%, -100%);
+    -webkit-transform: translate(-50%, -100%);
     transform: translate(-50%, -100%);
     float: right
 
