--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
     -ms-transform: translate(-50%, -100%);
     -webkit-transform: translate(-50%, -100%);
     transform: translate(-50%, -100%);
-    float: right
+    /*float: right*/
 
 }
 
