--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,26 @@
 	font-size: 2em
 }
 
+
+
 .title {
 	font-family: 'Lobster', cursive;
 	
+}
+
+.titleCv  {
+	font-family: 'Lobster', cursive;
+	border-left: solid #2196F3 20px;
+	color: #2196F3;
+	font-size: 3em;
+}
+
+.titleWork  {
+	/*font-family: 'Lobster', cursive;*/
+	color: #2196F3;
+	font-size: 2em;
+	/*border-bottom: solid #2196F3 2px;*/
+	text-align: center;
 }
 
 .action {
