--- a/css/materialize.css
+++ b/css/materialize.css
@@ -5397,10 +5397,11 @@ button.btn-floating {
   right: 0;
   background-color: #fafafa;
   padding: 0;
-  max-height: 100%;
+  max-height: 80%;
   width: 55%;
   margin: auto;
   overflow-y: auto;
+  overflow-x: auto;
   border-radius: 2px;
   will-change: top, opacity;
 }
@@ -5416,7 +5417,7 @@ button.btn-floating {
 }
 
 .modal .modal-content {
-  padding: 24px;
+  /*padding: 24px;*/
 }
 
 .modal .modal-close {
@@ -5452,7 +5453,7 @@ button.btn-floating {
 
 .modal.modal-fixed-footer {
   padding: 0;
-  height: 70%;
+  height: 200%;
 }
 
 .modal.modal-fixed-footer .modal-content {
